# simple_fastfloat_benchmark

./: CMakeLists.txt
benchmarks/: CMakeLists.txt  benchmark.cpp
data/: numbers10.tsv  numbers4.tsv  numbers5.tsv  numbers6.tsv  numbers7.tsv  numbers8.tsv  numbers9.tsv  run_bench.sh
ffloat/: CMakeLists.txt  README.md
ffloat/include/ffloat/: defines.h  ffloat.h  shift10.h  string_utils.h
ffloat/src/: shift10.cpp
